# cbz-tagger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  Dockerfile  Makefile  Makeunraid.sh  README.md  REFLEX_MIGRATION.md  build.sh  dependabot.yml  docker-compose.yaml  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  requirements.txt  run.py  rxconfig.py  setup.py  start.py
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: docker-hub.yml  pull-request-tests.yml  pull-request-version.yml  python-app.yml  release-docker-hub.yml  release-on-merge.yml
cbz_tagger/: __init__.py  cbz_tagger.py  container.py  run.py  run_gui.py
cbz_tagger/api/: __init__.py  app.py  entities_router.py  logs_router.py  models.py  scanner_router.py  scheduler.py  server.py  state.py  state_router.py
cbz_tagger/cbz_entity/: cbz_entity.py  cbz_scanner.py
cbz_tagger/common/: converter.py  enums.py  env.py  get_arg_parser.py  helpers.py  html_scraper.py  input.py  log_element_handler.py  plugins.py  version.py
cbz_tagger/container/: base.py  base_container.py  cbz_scanner.py  container.py  continuous.py  enums.py  factory.py  file_scanner.py  gui_container.py  manual.py  manual_container.py  reflex_gui_container.py  timer.py  timer_container.py
cbz_tagger/database/: author_entity_db.py  base_db.py  cbz_database.py  cbz_scanner.py  chapter_entity_db.py  cover_entity_db.py  entity_db.py  file_scanner.py  metadata_entity_db.py  volume_entity_db.py
cbz_tagger/database/entities/: author_entity.py  base_entity.py  chapter_entity.py  cover_entity.py  metadata_entity.py  volume_entity.py
cbz_tagger/entities/: author_entity.py  base_entity.py  cbz_entity.py  chapter_entity.py  cover_entity.py  mangasee.py  metadata_entity.py  volume_entity.py
cbz_tagger/entities/chapter_plugins/: __init__.py  cmk.py  html_plugin.py  kal.py  mangadex.py  mangasee.py  mdx.py  mgo.py  mse.py  plugin.py  plugin_mdx.py  plugin_mse.py  response_builder.py  wbc.py
cbz_tagger/entities/plugins/: __init__.py  cmk.py  kal.py  mdx.py  plugin_entity.py  wbc.py
cbz_tagger/gui/: api.py  enums.py  file_log_reader.py  functions.py  gui.py  server.py  simple_gui.py
cbz_tagger/gui/elements/: config_table.py  series_table.py  ui_logger.py
cbz_tagger/reflex_gui/: __init__.py  reflex_app.py
cbz_tagger/reflex_gui/components/: __init__.py  navbar.py  series_table.py
cbz_tagger/reflex_gui/pages/: __init__.py  config.py  logs.py  manage.py  series.py
cbz_tagger/reflex_gui/states/: __init__.py  base_state.py  config_state.py  log_state.py  manage_state.py  series_state.py
cbz_tagger/reflex_gui/utils/: log_handler.py
cbz_tagger/scanner/: manga_db.py  manga_object.py  manga_scanner.py
cbz_tagger/web/: api.py  server.py
frontend/: .gitignore  .prettierignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  ChapterDownloadsDialog.tsx  ConfigDialog.tsx
frontend/src/lib/: api-client.ts  api-schema.ts  staleness.test.ts  staleness.ts
frontend/src/pages/: AddSeriesPage.test.tsx  AddSeriesPage.tsx  ConfigPage.test.tsx  ConfigPage.tsx  LogPage.test.tsx  LogPage.tsx  ManageSeriesPage.test.tsx  ManageSeriesPage.tsx  SeriesPage.test.tsx  SeriesPage.tsx
frontend/src/test/: setup.ts
manga_tag/: manga.py
manga_tag/common/: enums.py  env.py
manga_tag/container/: base.py  continuous.py  factory.py  manual.py  timer.py
manga_tag/scanner/: manga_db.py  manga_object.py  manga_scanner.py
manga_tag/services/: container.py  manga_db.py  manga_scanner.py
scripts/: bump_constraints.py  clean_git.sh  export_openapi_schema.py
tests/: conftest.py  temp.txt
tests/fixtures/: expected_chapter_1.xml  expected_chapter_10.xml  expected_chapter_1_with_count_11.xml  expected_chapter_1_with_count_3.xml  kal_chapter.txt  kal_series.txt  wbc_chapter.txt  wbc_series.txt
tests/mock/: entity_db.json
tests/scan/Precious. 4P Short Stories/: Precious. 4P Short Stories - 1.cbz
tests/test_functional/: test_downloader.py
tests/test_functional/config/: entity_db.json
tests/test_integration/: conftest.py  test_cbz_downloading.py  test_cbz_processing.py  test_cbz_scanning.py  test_chapter_plugins_api.py  test_end_to_end.py  test_mangadex.py  test_mangasee.py
tests/test_integration/config/: entity_db.json
tests/test_integration/test_api/: test_api.py
tests/test_integration/test_connections/: test_cbz_downloading.py  test_cbz_scanning.py
tests/test_scanner/: test_mangadex.py
tests/test_unit/: conftest.py
tests/test_unit/test_cbz_entity/: test_cbz_entity.py  test_cbz_scanner.py
(+51 files in other folders)
