[project]
name = "cbz_tagger" # REQUIRED, is the only field that cannot be marked as dynamic.
version = "3.10.0" # REQUIRED, although can be dynamic
description = "CBZ Tagger is a tool to tag comic book files in CBZ format"
authors = [
    {name = "Matt Nitzken",email = "mjnitz02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)",
    "nicegui (>=2.13.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<4.13.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "ruff (>=0.11.2,<0.12.0)"
]


[tool.poetry]
packages = []
package-mode = false


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".venv",
    "icon",
    "scripts",
    "venv",
    "__pycache__",
]

# Same as Black.
line-length = 120

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["C", "E", "W", "F", "B", "I"]
ignore = ["C400", "C401", "C901"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
force-single-line = true
