[project]
name = "cbz_tagger"
version = "3.14.1"
description = "CBZ Tagger is a tool to tag comic book files in CBZ format"
authors = [
    {name = "Matt Nitzken",email = "mjnitz02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pytest>=8.4.1",
    "requests-mock>=1.12.1",
    "ruff>=0.12.7",
    "nicegui>=2.22.0",
    "cloudscraper>=1.2.71",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "pre-commit>=4.2.0",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".venv",
    "icon",
    "scripts",
    "venv",
    "__pycache__",
]

# Same as Black.
line-length = 120

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["C", "E", "W", "F", "B", "I"]
ignore = ["C400", "C401", "C901"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
force-single-line = true
